// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button Base 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn-base"
    type="button"
  >
     
    Button Base Only (no skin)
     
  </button>
</section>
`;

exports[`Storyshots Button Button Blank 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-blank"
    type="button"
  >
     
    Cancel
     
  </button>
</section>
`;

exports[`Storyshots Button Button Overrides 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn my-custom-css-klass"
    type="button"
  >
     
    Custom CSS Override
     
  </button>
</section>
`;

exports[`Storyshots Button Button Type Reset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="reset"
  >
     
    Button Type Attribute Set To Reset
     
  </button>
</section>
`;

exports[`Storyshots Button Button Type Submit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="submit"
  >
     
    Button Type Attribute Set To Submit
     
  </button>
</section>
`;

exports[`Storyshots Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn"
    type="button"
  >
     
    Default
     
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered"
    type="button"
  >
     
    Default Bordered
     
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered btn-rounded"
    type="button"
  >
     
    Default Bordered Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Default Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-raised"
    type="button"
  >
     
    Default Raised
     
  </button>
</section>
`;

exports[`Storyshots Button Default Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-rounded"
    type="button"
  >
     
    Default Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn disabled"
    type="button"
  >
     
    Disabled
     
  </button>
</section>
`;

exports[`Storyshots Button Groups Button Group 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label=""
    class="btn-group"
    role="group"
  >
    <button
      class="btn"
      type="button"
    >
       
      one
       
    </button>
     
    <button
      class="btn"
      type="button"
    >
       
      two
       
    </button>
     
    <button
      class="btn"
      type="button"
    >
       
      three
       
    </button>
  </div>
   
  <div
    aria-label=""
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
       
      one
       
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
       
      two
       
    </button>
     
    <button
      class="btn btn-primary"
      type="button"
    >
       
      three
       
    </button>
  </div>
   
  <div
    aria-label=""
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-secondary"
      type="button"
    >
       
      one
       
    </button>
     
    <button
      class="btn btn-secondary"
      type="button"
    >
       
      two
       
    </button>
     
    <button
      class="btn btn-secondary"
      type="button"
    >
       
      three
       
    </button>
  </div>
   
  <div
    style="margin-bottom: 40px;"
  />
   
  <div
    aria-label=""
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
       
      one
       
    </button>
     
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
       
      two
       
    </button>
     
    <button
      class="btn btn-primary btn-bordered"
      type="button"
    >
       
      three
       
    </button>
  </div>
   
  <div
    aria-label=""
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
       
      one
       
    </button>
     
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
       
      two
       
    </button>
     
    <button
      class="btn btn-secondary btn-bordered"
      type="button"
    >
       
      three
       
    </button>
  </div>
</section>
`;

exports[`Storyshots Button Icons Button Icon Left Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-icon-left"
    type="button"
  >
    <svg
      aria-hidden="true"
      height="16"
      version="1.1"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M9 12h2l-3 3-3-3h2V7h2v5zm3-8c0-.44-.91-3-4.5-3C5.08 1 3 2.92 3 5 1.02
      5 0 6.52 0 8c0 1.53 1 3 3 3h3V9.7H3C1.38 9.7 1.3 8.28 1.3 8c0-.17.05-1.7
      1.7-1.7h1.3V5c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81
      0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V11h2c2.08 0 4-1.16 4-3.5C16
      5.06 14.08 4 12 4z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
     
    Download
     
  </button>
</section>
`;

exports[`Storyshots Button Icons Button Icon Right Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-icon-right"
    type="button"
  >
     
    Call
     
    <svg
      aria-hidden="true"
      data-custom-icon="true"
      fill="currentColor"
      focusable="false"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36
      1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39
      0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57
      3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
      />
    </svg>
  </button>
</section>
`;

exports[`Storyshots Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-large"
    type="button"
  >
     
    Large
     
  </button>
</section>
`;

exports[`Storyshots Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary"
    type="button"
  >
     
    Button
     
  </button>
</section>
`;

exports[`Storyshots Button Primary Block 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-block"
    type="button"
  >
     
    Block (aka Stacked)
     
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered"
    type="button"
  >
     
    Primary Bordered
     
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-rounded"
    type="button"
  >
     
    Primary Borded Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded"
    type="button"
  >
     
    Primary Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-raised"
    type="button"
  >
     
    Primary Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary"
    type="button"
  >
     
    Secondary
     
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered"
    type="button"
  >
     
    Secondary Bordered
     
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered btn-rounded"
    type="button"
  >
     
    Secondary Borded Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded"
    type="button"
  >
     
    Secondary Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded btn-raised"
    type="button"
  >
     
    Secondary Rounded
     
  </button>
</section>
`;

exports[`Storyshots Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-small"
    type="button"
  >
     
    Small
     
  </button>
</section>
`;
